--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p id="count">0</p>
           <img src="./images/icon-plus.svg" alt="plus" id="plus">
          </button>
-         <button class="orangecart" onclick="addToCart()"><img src="./images/icon-cart.svg" alt="" class="blackcart">Add to Cart</button>
+         <button class="orangecart"><img src="./images/icon-cart.svg" alt="" class="blackcart">Add to Cart</button>
         </div>
       </div>
   </section>
