--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
   <section class="main">
     <!-- 1st div -->
       <div class="box1" id="one">
-        <img src="./images/image-product-1.jpg" alt="main pic" class="mainpic" id="gallery-pop">
+        <!-- Mobile navigation buttons -->
+        <div class="mobile-btns">
+          <button id="mobile-prev" class="mobile-btn">&#60;</button>
+          <button id="mobile-next" class="mobile-btn">&#62;</button>
+        </div>
+        <img src="./images/image-product-1.jpg" alt="main pic" class="mainpic" id="mainpic">
         <div class="pics" id="pics">
-          <img src="./images/image-product-1-thumbnail.jpg" data-id="1" id="pic" alt="one"    class="pic">
+          <img src="./images/image-product-1-thumbnail.jpg" data-id="1" id="pic" alt="one"    class="pic active">
           <img src="./images/image-product-2-thumbnail.jpg" data-id="2" id="pic"  alt="two"   class="pic">
           <img src="./images/image-product-3-thumbnail.jpg" data-id="3" id="pic"  alt="three" class="pic">
           <img src="./images/image-product-4-thumbnail.jpg" data-id="4" id="pic"  alt="four"  class="pic">
